finish text of pizza article

--- a/_posts/2021-02-12-pizza.md
+++ b/_posts/2021-02-12-pizza.md
@@ -2,13 +2,13 @@
 layout: post
 title:  A Scientist's Homemade Pizza
 date: 2021-03-21 20:16:00
-description: My experiments with homemade pizza, including a full recipe.
+description: My experiments with homemade pizza, including scientific background and a full recipe.
 comments: true
 ---
 
 ## Recipe
 If you want to get started making pizza right away, here is my dough recipe.
-Check the rest of the [article below](#intro) for the background information on how the recipe works,
+Check the rest of the [article below](#intro) for science and background information on how the recipe works,
 as well as tips and explanation on the individual steps.
 
 <table class="recipe">
@@ -23,68 +23,68 @@ as well as tips and explanation on the individual steps.
         <td>Water</td>
         <td>400g</td>
         <td>40%</td>
-        <td>Combine.</td>
+        <td>(1) Combine.</td>
     </tr>
     <tr>
         <td>Flour (type 00)</td>
         <td>80g</td>
         <td>8%</td>
-        <td>Bring to boil.</td>
+        <td>(2) Bring to boil.</td>
     </tr>
     <tr>
         <td></td>
         <td></td>
         <td></td>
-        <td>Cool.</td>
+        <td>(3) Cool.</td>
     </tr>
     <tr class="divider"></tr>
     <tr>
         <td>Water</td>
         <td>350g</td>
         <td>35%</td>
-        <td>Dissolve salt, sugar and yeast in water.</td>
+        <td>(4) Dissolve salt, sugar and yeast in water.</td>
     </tr>
     <tr>
         <td>Salt</td>
         <td>30g</td>
         <td>3%</td>
-        <td>Combine with flour.</td>
+        <td>(5) Add flour.</td>
     </tr>
     <tr>
         <td>Sugar</td>
         <td>10g</td>
         <td>1%</td>
-        <td>Add flour/water paste prepared above and knead until combined.</td>
+        <td>(6) Add flour/water paste prepared above and knead until combined.</td>
     </tr>
     <tr>
         <td>Fresh Yeast</td>
         <td>2g</td>
         <td>0.2%</td>
-        <td>Let sit for ~30 minutes.</td>
+        <td>(7) Let sit for ~30 minutes.</td>
     </tr>
     <tr>
         <td>Flour (type 00)</td>
         <td>1000g</td>
         <td>100%</td>
-        <td>Knead with machine and/or by hand until strong dough forms (use window test).</td>
+        <td>(8) Knead with machine and/or by hand until strong dough forms (use window test).</td>
     </tr>
     <tr>
         <td></td>
         <td></td>
         <td></td>
-        <td>Bulk-ferment for 1 - 2 hours.</td>
+        <td>(9) Bulk-ferment for 1 - 2 hours.</td>
     </tr>
     <tr>
         <td></td>
         <td></td>
         <td></td>
-        <td>Divide in dough-balls (250g - 300g each).</td>
+        <td>(10) Divide in dough-balls (250g - 300g each).</td>
     </tr>
     <tr>
         <td></td>
         <td></td>
         <td></td>
-        <td>Ferment individual dough-balls for another 4 - 6 hours.</td>
+        <td>(11) Ferment individual dough-balls for another 4 - 6 hours.</td>
     </tr>
 </table>
 <a name="intro"></a>
@@ -119,7 +119,7 @@ amount of time. We can also change the oven material to something with better su
 Pizza is commonly baked on stone. Steel, however, has a higher heat capacity and a lower heat resistance then stone.
 That means it stores more energy at the same temperature, and transmits it to the pizza faster. Luckily, I am not the 
 first one to notice that \[1,2,3\] and *baking-steels* are available as a commercial product 
-(You can search on google. But really any slab of steel with low heat resistance should do well).   
+(You can search on google. But really any slab of steel with a low heat resistance should do well).   
 
 In addition, we should put the pizza as close to the top of the oven as possible, as the air will be hottest here. 
 The baking-steel will heat the pizza from the bottom sufficiently. We can switch the oven to broiler mode to concentrate 
@@ -132,17 +132,112 @@ Techniques from bread-making are helpful here, as they often deal with high hydr
 Add as much water as you dare, without loosing control of your dough. Start with a conservative hydration like 60% 
 and work your way up as you practice.
 
-The goal is for the underside to NOT dry out and become crispy by the time dark spots appear on the top. 
+The goal is for the underside to NOT dry out or become crispy before dark spots appear on the top. 
 
-## 3 - Flour, Sugar, Oil and Salt
+## 3 - Flour, Salt, Oil and Sugar
+The main ingredient for pizza dough is wheat flour. Many types of exist, and pizza is traditionally made with
+Italian type 00 flour. This produces a strong yet stretchy dough. If it is hard to get or expensive where you live, you
+can try to substitute bread flour (or your local equivalent).
+
+When flour absorbs water, enzymes in the flour are activated that break down proteins which then form 
+the gluten network. This gluten network keeps the dough together and allow us to stretch it without breaking. It also
+keeps the gas inside that is produced by the yeast bacteria. Kneading speeds up the absorption of water 
+and gluten formation. Folding the dough over itself aligns the gluten molecules and
+forms a stronger network. However, kneading iss not strictly necessary. The flour will absorb water on its own and
+form gluten. This is called Autolysis \[3\]. One could say the dough is kneading itself, which we will take full 
+advantage of when making pizza dough later.
+
+Salt is not only important for flavor, it also enhances the dough's strength. XYZ discuss the effects of salt in dough 
+making in detail. XYY observe a higher extensibility in dough with added salt.
+
+Some recipes online call for the addition of olive oil. It is however known, that fat inhibits gluten formation \[\].  
+In my own tests, dough with oil seemed to rip more easily then dough without oil during the shaping of the pizza. I
+therefore recommend to not add any oil to your pizza dough. 
+
+Dough browns in baking, because starch is broken down into sugar and then caramelizes when heated. Adding extra sugar
+can reduce the time it takes for the dough to brown. Multiple Pizza-Chefs have suggested adding sugar to 
+homemade pizza \[1,2\]. In my tests, adding 1% sugar to the dough reduced the time until browning begins by up to 11% 
+(will most likely depend on you oven setup and other dough components as well). 
 
 ## 4 - Tangzhong
+*Tangzhong* is a bread-making technique commonly used in asia. It Improves consistency and moisture retention of baked
+goods and makes high hydration dough easier to work with. *Tangzhong* is made by boiling a flower and water mixture,
+until the starches activate, and the mixture thickens into a gelatinous paste. It is then cooled down and added to 
+the main dough \[?\]. Dan Souza suggests on the *American test Kitchen YouTube channel* suggests using half of the 
+total water used in the dough for *Tangzhong* and mixing it with flour in a 5:1 ratio (5 parts water, 1 part flour).
 
 ## 5 - Full Recipe
+Now it is time to put all components together and make the pizza. We use flour, water, salt, sugar and yeast. Example
+ratios are shown in the [table at the beginning of the post](#Recipe). The yeast content is very low, to allow for a 
+long fermentation period. This way the flour has more time to absorb water, and the dough develops a deep flavor. Adjust
+the water content based on your confidence in handling high hydration dough. I highly recommend getting a 
+metal bench-scraper, as it make working with high hydration dough much easier. 
+
+- (1) - (3) Start with preparing the *Tangzhong*. Use about half your total water and wisk in 1/5 of the waters weight 
+  in flour. Then boil the mixture until it thickens into a gooey paste. Set aside and let it cool down fully before 
+  adding to the dough.
+- (4) Pour the rest of the water into a mixing bowl. Dissolve salt and sugar in the water, using a wooden spoon to stir.
+  Salt can kill yeast bacteria, so you might want to add a tablespoon of flour before dissolving the yeast. Make sure 
+  salt, sugar and yeast are distributed evenly in the water. 
+- (5) Add the flour while mixing with your hand or wooden spoon.
+- (6) Add the *Tangzhong* created in step (1) - (3) and mix until everything is incorporated.  Check for loose flour or 
+  water puddles at the bottom of your mixing bowl.
+- (7) Cover the bowl with a damp kitchen towel and let the dough sit for about 30 minutes to absorb the water and start
+  autolysis. This is optional, but highly recommended as it will make kneading easier, especially when you plan on 
+  hand-kneading the dough.
+- (8) Knead for about 25 minutes in a stand mixer. If you do not have a stand mixer you can knead by hand. That has the 
+  added bonus of saving on you gym subscription. The dough should now be one cohesive, smooth mass. Depending on you 
+  water content it will still be quite sticky. Take it out of the machine and knead on an *un-floured* surface using the
+  "slap and fold" technique. The dough should become much stronger and less sticky after a few minutes. Whenever the
+  dough becomes hard to work with, let it sit for a few minutes, so the gluten network can relax. You are done when the 
+  dough can be stretched between your fingers, without breaking, so thin it becomes translucent (window test).
+- (9) Place the dough back in the mixing bowl and cover with a damp towel. Ferment for 1 - 2 hours.
+- (10) Divide the dough into balls of 250g - 300g weight. Roll the dough into itself, like making Mozzarella, 
+  to form balls with high surface tension and multiple "layers" of dough.
+- (11) Ideally, dough balls are places in a closed container, but a baking sheet covered with a damp towel works as well.
+  Let the balls ferment for another 4 - 6 hours. I have also had success with dough-balls kept in the fridge 
+  (in plastic boxes) for up to 24 hours. Give them enough time to come back to room temperature before forming pizzas.
+- (12) During the fermentation, preheat your oven with the baking steel in it for at least one hour at maximum 
+  temperature. Use a oven rack as close to the top as possible, and put the oven into broiler mode. Prepare your 
+  tomato sauce and toppings. I like the original version with basil, Mozzarella, Parmigiano and olive oil. Adding 
+  thinly sliced mushrooms or eggplant also works well.
+- (13) Time to stretch out the dough and shape the pizza. You will get best results with the traditional 
+  "slapping"-technique, which is however very difficult to master. It has been explained and demonstrated by Pizza-Chef
+  Enzo Coccia in multiple videos \[?\]. Alternatively you can dangle the pizza disc from you knuckles and slowly stretch
+  it this way. The goal is an evenly thin disc, with a slightly thicker rim. Most of the gas should be pressed 
+  into that rim. Do not use a rolling pin or similar tool, as this will flatten the pizza everywhere equally and does 
+  not allow for a thicker rim on the outside.
+- (14) Use as little flour as possible during the shaping, as excess flour will burn in the oven. But make sure the 
+  dough does slide around on your working surface without sticking before you proceed to adding toppings. If the dough
+  rips during the shaping process, you will most likely not be able to fix that. Do not bake a pizza with holes in 
+  it, as tomato sauce will leak out and burn on the baking steel immediately. You can roll the dough back into a ball,
+  in which case you need to give the gluten some time to relax before you can stretch it out again. If you discover the
+  hole only after adding toppings, you can roll the pizza up and bake it on baking paper to salvage.
+- (15) Once the dough is stretched out thin and you start adding tomato sauce you are on a timer. It will absorb 
+  moisture from the sauce and eventually stick to your working surface and rip. So work quickly and 
+  add all your toppings. Then push your hands underneath the pizza and with your fingers bend backwards, slide it over
+  onto your pizza peel. If you have your fingers in a "claw"-position, your fingernails will rip holes into the dough.
+  Instead just use the friction of your fingers against the pizza to slide it over in one swift motion.
+- (16) Transfer to the oven and bake until dark brown spots form at the top.
 
 ## 6 - Variations and Conclusion
+After presenting the challenges of homemade pizza, this article explored the influence of heat, water, and the different
+dough components on the end result. It then presented a recipe with step-by-step instructions, highlighting critical 
+steps and potential pitfalls. The resulting pizza convinces me, and my guests, in taste and texture. 
+Most people agreed, that it is superior to at least the cheaper local pizza shops where I live.
+
+Some variations to the above recipe are possible. In \[?\] Enzo Coccia shows how he omits the bulk-fermentation stage 
+and instead starts to form dough-balls after only a few minutes of resting the dough. The individual balls are then
+fermented for 10 hours. This schedule might be easier to integrate into everyday live. Depending on the consistency of 
+your Mozzarella, it might melt completely during the long baking time and mix with the 
+tomato sauce into a puddle of orange liquid. To get closer to the "spotty" look of Neapolitan Pizza, only add the cheese 
+at the halfway point during baking. To emulate the aroma of the wood-fire oven, 
+one might try to smoke the pizza using wood chips, or a cold smoke gun.
+
+I hope this article was helpful, and you will have a great time making and eating pizza!
+Feel free to discuss any questions in the comments below, and post pictures of your pizza if you give the recipe a try.
 
 ## References
 \[1\] <br>
 \[2\] <br>
-\[3\] <br>
+\[3\] The Science of Autolyse; Website, accessed March 2021: [https://www.greekchemistinthekitchen.com/post/autolyse] <br>
