--- a/_posts/2021-02-12-pizza.md
+++ b/_posts/2021-02-12-pizza.md
@@ -95,18 +95,18 @@ If you do not have access to Italian type 00 flour, you can experiment with brea
 In 2010 the *sociazione Verace Pizza Napoletana* filed an application with the European Union 
 to register neapolitan pizza as a *TSG* (traditional specialities guaranteed). 
 The pdf, which is available publicly, also includes the full official recipe and process. 
-Why then do we find countless articles and YouTube tutorials by home bakers and cooks, teaching different variations of 
+So why then do we find countless articles and YouTube tutorials by home bakers and cooks, teaching different variations of 
 the recipe, when we search the internet for neapolitan pizza?
 
-Not only is the traditional technique of shaping the pizza very difficult, the official recipe also calls for a 
+Not only is the traditional technique of shaping the pizza dough difficult, the official recipe also calls for a 
 wood-fire oven with a baking temperature of 485°C (yes, celsius). That results in a baking time of 60 to 90 seconds.
 While I am in no position to simplify the traditional technique (you just gotta practice), I present here my workaround
 to making delicious pizza in a domestic electric oven.
 
-The article will first discuss the baking process and how temperature effects the end result. We then examine 
-the role different ingredients play in the process of dough making. Next we learn about, *Tangzhong*, an asian 
+First, we will discuss the baking process and how temperature effects the end result. We will then examine 
+the role different the ingredients play in the process of dough making. Next we learn about, *Tangzhong*, an asian 
 break-making technique which is useful when making dough with high water content. Putting everything together, 
-in section 5 we explain the entire pizza making process in detail, before exploring variations in the final section.
+in section 5 we go through the entire pizza making process in detail, before exploring variations in the final section.
 
 ## 2 - Heat and Water
 During baking, energy is transferred from the oven to the pizza. After a certain amount of energy is transferred to the 
@@ -116,9 +116,9 @@ The amount of energy needed to change a object's temperature depends on the mate
 The rate at which energy is transferred is proportional to the heat resistance of both materials involved, and
 their difference in temperature. When baking at a lower temperature we therefore need to bake the pizza for a longer 
 amount of time. We can also change the oven material to something with better suited thermal properties. 
-Pizza is commonly baked on stone. Steel, however, has a higher heat capacity and a lower heat resistance then stone.
-That means it stores more energy at the same temperature, and transmits it to the pizza faster. Luckily, I am not the 
-first one to notice that \[1,2,3\] and *baking-steels* are available as a commercial product 
+Pizza is commonly baked on stone. Steel, however, has a higher heat capacity and a lower heat resistance than stone.
+That means it stores more energy at the same temperature, and transmits it to the pizza faster. Baking on steel
+has been proposed by multiple other articles and videos \[1,2,3\] and *baking-steels* are available as a commercial product
 (You can search on google. But really any slab of steel with a low heat resistance should do well).   
 
 In addition, we should put the pizza as close to the top of the oven as possible, as the air will be hottest here. 
@@ -141,14 +141,16 @@ can try to substitute bread flour (or your local equivalent).
 
 When flour absorbs water, enzymes in the flour are activated that break down proteins which then form 
 the gluten network. This gluten network keeps the dough together and allow us to stretch it without breaking. It also
-keeps the gas inside that is produced by the yeast bacteria. Kneading speeds up the absorption of water 
-and gluten formation. Folding the dough over itself aligns the gluten molecules and
-forms a stronger network. However, kneading iss not strictly necessary. The flour will absorb water on its own and
+keeps the gas, that is produced by the yeast bacteria during fermentation, inside the dough and allows it to 
+rise and become fluffy. Kneading speeds up the absorption of water and gluten formation. 
+Folding the dough over itself aligns the gluten molecules and
+forms a stronger network. However, kneading is not strictly necessary. The flour will absorb water on its own and
 form gluten. This is called Autolysis \[3\]. One could say the dough is kneading itself, which we will take full 
 advantage of when making pizza dough later.
 
-Salt is not only important for flavor, it also enhances the dough's strength. XYZ discuss the effects of salt in dough 
-making in detail. XYY observe a higher extensibility in dough with added salt.
+Salt is not only important for flavor, it also enhances the dough's strength. XYZ discuss the chemical effects of salt 
+in dough making in detail, while XYY compare different doughs and observe a higher *extensibility* in dough 
+with added salt.
 
 Some recipes online call for the addition of olive oil. It is however known, that fat inhibits gluten formation \[\].  
 In my own tests, dough with oil seemed to rip more easily then dough without oil during the shaping of the pizza. I
@@ -160,8 +162,8 @@ homemade pizza \[1,2\]. In my tests, adding 1% sugar to the dough reduced the ti
 (will most likely depend on you oven setup and other dough components as well). 
 
 ## 4 - Tangzhong
-*Tangzhong* is a bread-making technique commonly used in asia. It Improves consistency and moisture retention of baked
-goods and makes high hydration dough easier to work with. *Tangzhong* is made by boiling a flower and water mixture,
+*Tangzhong* is a bread-making technique commonly used in asia. It improves consistency and moisture retention of baked
+goods and makes high hydration dough easier to work with. *Tangzhong* is made by boiling a flour and water mixture,
 until the starches activate, and the mixture thickens into a gelatinous paste. It is then cooled down and added to 
 the main dough \[?\]. Dan Souza suggests on the *American test Kitchen YouTube channel* suggests using half of the 
 total water used in the dough for *Tangzhong* and mixing it with flour in a 5:1 ratio (5 parts water, 1 part flour).
