--- a/_posts/2021-02-12-pizza.md
+++ b/_posts/2021-02-12-pizza.md
@@ -94,7 +94,7 @@ If you do not have access to Italian type 00 flour, you can experiment with brea
 ## 1 - Introduction
 In 2010 the *sociazione Verace Pizza Napoletana* filed an application with the European Union 
 to register neapolitan pizza as a *TSG* (traditional specialities guaranteed). 
-The pdf, which is available publicly, also includes the full official recipe and process. 
+The pdf, which is available publicly, also includes the full official recipe and process\[[1](#references)\]. 
 So why then do we find countless articles and YouTube tutorials by home bakers and cooks, teaching different variations of 
 the recipe, when we search the internet for neapolitan pizza?
 
@@ -110,15 +110,16 @@ in section 5 we go through the entire pizza making process in detail, before exp
 
 ## 2 - Heat and Water
 During baking, energy is transferred from the oven to the pizza. After a certain amount of energy is transferred to the 
-pizza, the dough becomes cooked and the surface browns.  
+pizza, the dough becomes cooked and the surface browns \[[2](#references)\].  
 
 The amount of energy needed to change a object's temperature depends on the materials heat capacity. 
 The rate at which energy is transferred is proportional to the heat resistance of both materials involved, and
 their difference in temperature. When baking at a lower temperature we therefore need to bake the pizza for a longer 
 amount of time. We can also change the oven material to something with better suited thermal properties. 
-Pizza is commonly baked on stone. Steel, however, has a higher heat capacity and a lower heat resistance than stone.
+Pizza is commonly baked on stone. Steel, however, has a lower heat resistance than stone.
 That means it stores more energy at the same temperature, and transmits it to the pizza faster. Baking on steel
-has been proposed by multiple other articles and videos \[1,2,3\] and *baking-steels* are available as a commercial product
+has been proposed by multiple other articles and videos \[[3](#references),[4](#references)\] and 
+*baking-steels* are available as a commercial product
 (You can search on google. But really any slab of steel with a low heat resistance should do well).   
 
 In addition, we should put the pizza as close to the top of the oven as possible, as the air will be hottest here. 
@@ -126,7 +127,8 @@ The baking-steel will heat the pizza from the bottom sufficiently. We can switch
 the entire power output of the oven on the top side of the pizza.
 
 While those methods will decrease baking time considerably, we will not be able to reach the 60 to 90 seconds required
-by the original recipe. Longer baking means more time for water to evaporate, and the pizza to dry out. To counteract
+by the original recipe. Longer baking means more time for water to evaporate, 
+and the pizza to dry out \[[5](#references)\]. To counteract
 that, we will add more water to our dough. High hydration dough can be sticky and takes some practice to work with.
 Techniques from bread-making are helpful here, as they often deal with high hydration dough. 
 Add as much water as you dare, without loosing control of your dough. Start with a conservative hydration like 60% 
@@ -145,12 +147,12 @@ keeps the gas, that is produced by the yeast bacteria during fermentation, insid
 rise and become fluffy. Kneading speeds up the absorption of water and gluten formation. 
 Folding the dough over itself aligns the gluten molecules and
 forms a stronger network. However, kneading is not strictly necessary. The flour will absorb water on its own and
-form gluten. This is called Autolysis \[3\]. One could say the dough is kneading itself, which we will take full 
-advantage of when making pizza dough later.
+form gluten. This is called Autolysis \[[6](#references)\]. One could say the dough is kneading itself, which we will 
+take advantage of when making pizza dough later.
 
-Salt is not only important for flavor, it also enhances the dough's strength. XYZ discuss the chemical effects of salt 
-in dough making in detail, while XYY compare different doughs and observe a higher *extensibility* in dough 
-with added salt.
+Salt is not only important for flavor, it also enhances the dough's strength. Belz et al. \[[7](#references)] discuss 
+the chemical effects of salt in dough making in detail, while Man et al. \[[8](#references)] compare different 
+doughs and observe a higher *extensibility* in dough with added salt.
 
 Some recipes online call for the addition of olive oil. It is however known, that fat inhibits gluten formation \[\].  
 In my own tests, dough with oil seemed to rip more easily then dough without oil during the shaping of the pizza. I
@@ -158,15 +160,17 @@ therefore recommend to not add any oil to your pizza dough.
 
 Dough browns in baking, because starch is broken down into sugar and then caramelizes when heated. Adding extra sugar
 can reduce the time it takes for the dough to brown. Multiple Pizza-Chefs have suggested adding sugar to 
-homemade pizza \[1,2\]. In my tests, adding 1% sugar to the dough reduced the time until browning begins by up to 11% 
+homemade pizza \[[9](#references),[10](#references)\]. In my tests, adding 1% sugar to the dough reduced the time until 
+browning begins by up to 11%
 (will most likely depend on you oven setup and other dough components as well). 
 
 ## 4 - Tangzhong
 *Tangzhong* is a bread-making technique commonly used in asia. It improves consistency and moisture retention of baked
 goods and makes high hydration dough easier to work with. *Tangzhong* is made by boiling a flour and water mixture,
 until the starches activate, and the mixture thickens into a gelatinous paste. It is then cooled down and added to 
-the main dough \[?\]. Dan Souza suggests on the *American test Kitchen YouTube channel* suggests using half of the 
-total water used in the dough for *Tangzhong* and mixing it with flour in a 5:1 ratio (5 parts water, 1 part flour).
+the main dough \[[11](#references)\]. Dan Souza suggests on the *American test Kitchen YouTube channel* 
+suggests using half of the total water used in the dough for *Tangzhong* and mixing it with flour in a 5:1 ratio 
+(5 parts water, 1 part flour).
 
 ## 5 - Full Recipe
 Now it is time to put all components together and make the pizza. We use flour, water, salt, sugar and yeast. Example
@@ -192,7 +196,8 @@ metal bench-scraper, as it make working with high hydration dough much easier.
   water content it will still be quite sticky. Take it out of the machine and knead on an *un-floured* surface using the
   "slap and fold" technique. The dough should become much stronger and less sticky after a few minutes. Whenever the
   dough becomes hard to work with, let it sit for a few minutes, so the gluten network can relax. You are done when the 
-  dough can be stretched between your fingers, without breaking, so thin it becomes translucent (window test).
+  dough can be stretched between your fingers, without breaking, so thin it becomes translucent (window test). 
+  \[[12](#references)\] and \[[13](#references)\] show several kneading techniques for high hydration dough.
 - (9) Place the dough back in the mixing bowl and cover with a damp towel. Ferment for 1 - 2 hours.
 - (10) Divide the dough into balls of 250g - 300g weight. Roll the dough into itself, like making Mozzarella, 
   to form balls with high surface tension and multiple "layers" of dough.
@@ -205,7 +210,7 @@ metal bench-scraper, as it make working with high hydration dough much easier.
   thinly sliced mushrooms or eggplant also works well.
 - (13) Time to stretch out the dough and shape the pizza. You will get best results with the traditional 
   "slapping"-technique, which is however very difficult to master. It has been explained and demonstrated by Pizza-Chef
-  Enzo Coccia in multiple videos \[?\]. Alternatively you can dangle the pizza disc from you knuckles and slowly stretch
+  Enzo Coccia in multiple videos \[[14](#references),[15](#references)\]. Alternatively you can dangle the pizza disc from you knuckles and slowly stretch
   it this way. The goal is an evenly thin disc, with a slightly thicker rim. Most of the gas should be pressed 
   into that rim. Do not use a rolling pin or similar tool, as this will flatten the pizza everywhere equally and does 
   not allow for a thicker rim on the outside.
@@ -228,7 +233,7 @@ dough components on the end result. It then presented a recipe with step-by-step
 steps and potential pitfalls. The resulting pizza convinces me, and my guests, in taste and texture. 
 Most people agreed, that it is superior to at least the cheaper local pizza shops where I live.
 
-Some variations to the above recipe are possible. In \[?\] Enzo Coccia shows how he omits the bulk-fermentation stage 
+Some variations to the above recipe are possible. In \[[16](#references)\] Enzo Coccia shows how he omits the bulk-fermentation stage 
 and instead starts to form dough-balls after only a few minutes of resting the dough. The individual balls are then
 fermented for 10 hours. This schedule might be easier to integrate into everyday live. Depending on the consistency of 
 your Mozzarella, it might melt completely during the long baking time and mix with the 
@@ -240,6 +245,40 @@ I hope this article was helpful, and you will have a great time making and eatin
 Feel free to discuss any questions in the comments below, and post pictures of your pizza if you give the recipe a try.
 
 ## References
-\[1\] <br>
-\[2\] <br>
-\[3\] The Science of Autolyse; Website, accessed March 2021: [https://www.greekchemistinthekitchen.com/post/autolyse] <br>
+\[1\] *entering  a  name  in  the  register  of  traditional  specialities  guaranteed  \[Pizza  Napoletana  (TSG)\]*; 
+COMMISSION  REGULATION  (EU)  No  97/2010of;  4  February  2010; 
+[https://eur-lex.europa.eu/LexUriServ/LexUriServ.do?uri=OJ%3AL%3A2010%3A034%3A0007%3A0016%3AEN%3APDF](https://eur-lex.europa.eu/LexUriServ/LexUriServ.do?uri=OJ%3AL%3A2010%3A034%3A0007%3A0016%3AEN%3APDF) <br>
+\[2\] Andrey Varlamov, Andreas Glatz and Sergio Grasso (2018); *The Physics of baking good Pizza*; 
+IOP Publishing, Physics Education 
+[https://arxiv.org/pdf/1806.08790.pdf](https://arxiv.org/pdf/1806.08790.pdf) <br>
+\[3\] Adam Ragusea; *Why Pizza Steels Beat Pizza Stones (Yes, They Do)*; Video, accessed March 2021: 
+[https://www.youtube.com/watch?v=UWVEgoEGnkY](https://www.youtube.com/watch?v=UWVEgoEGnkY) <br>
+\[4\] Alexis Gabriel Aïnouz; *Homemade Pizza : Baking on Steel ! Big Time !*; Video, accessed March 2021:  
+[https://www.youtube.com/watch?v=ldo56hGAzHA&t=213s](https://www.youtube.com/watch?v=ldo56hGAzHA&t=213s)
+\[5\] Enzo Coccia; *Pizza fritta napoletana: i 6 errori più comuni*;  Italia Squisita YouTube, accessed March 2021:
+[https://www.youtube.com/watch?v=j68NaLedcV4](https://www.youtube.com/watch?v=j68NaLedcV4)
+\[6\] greek chemist in the kitchen; *The Science of Autolyse*; 
+Website, accessed March 2021: [https://www.greekchemistinthekitchen.com/post/autolyse](https://www.greekchemistinthekitchen.com/post/autolyse) <br>
+\[7\] Markus C.E. Belz, Liam A.M. Ryan & Elke K. Arendt (2012); 
+*The Impact of Salt Reduction in Bread: A Review*; 
+Critical Reviews in Food Science and Nutrition, 52:6, 514-524, DOI: 10.1080/10408398.2010.502265   
+[https://www.tandfonline.com/doi/full/10.1080/10408398.2010.502265](https://www.tandfonline.com/doi/full/10.1080/10408398.2010.502265) <br>
+\[8\] LI, Man, et al. (2018); *Comparative study of the quality characteristics of fresh noodles with regular 
+salt and alkali and the underlying mechanisms.*; Food chemistry, 2018, 246. Jg., S. 335-342.
+[https://www.sciencedirect.com/science/article/abs/pii/S0308814617318307](https://www.sciencedirect.com/science/article/abs/pii/S0308814617318307) <br>
+\[9\] Enzo Coccia (2017); *Pizza napoletana: Enzo Coccia risponde ai commenti di Youtube!*; Italia Squisita YouTube, 
+accessed March 2021: [https://www.youtube.com/watch?v=da82CVHC0HA](https://www.youtube.com/watch?v=da82CVHC0HA) <br>
+\[10\] Davide Civitiello (2017); *Pizza napoletana fatta in casa*; Italia Squisita YouTube,
+accessed March 2021: [https://www.youtube.com/watch?v=Cq90lUQUCUo](https://www.youtube.com/watch?v=Cq90lUQUCUo) <br>
+\[11\] Dan Souza (2019); *How to Transform Flour and Water into the Fluffiest Dinner Rolls*; 
+America's Test Kitchen YouTube: [https://www.youtube.com/watch?v=x2GWOHcEBcM](https://www.youtube.com/watch?v=x2GWOHcEBcM) <br>
+\[12\] Hendrik Kleinwaechter (2020); *7 Tricks to create superb dough strength and get more ovenspring*;
+The Bread Code YouTube, accessed March 2021: [https://www.youtube.com/watch?v=tWIn8NHJkFU](https://www.youtube.com/watch?v=tWIn8NHJkFU) <br>
+\[13\] Joshua Weissman (2019); *The Ultimate Homemade Sourdough Bread*;
+Joshua Weissman YouTube, accessed March 2021: [https://www.youtube.com/watch?v=jJpIzr2sCDE&t=451s](https://www.youtube.com/watch?v=jJpIzr2sCDE&t=451s) <br>
+\[14\] Alexis Gabriel Aïnouz (2020); *I Try to Master The Pizza "Slapping" Technique...*; Video, accessed March 2021:  
+[https://www.youtube.com/watch?v=YbkHihvXCPg](https://www.youtube.com/watch?v=YbkHihvXCPg) <br>
+\[15\] Enzo Coccia (2020); *Stendere la pizza napoletana come un grande maestro pizzaiolo*; Italia Squisita YouTube,
+accessed March 2021: [https://www.youtube.com/watch?v=xzbW8CZx538&t=148s](https://www.youtube.com/watch?v=xzbW8CZx538&t=148s) <br>
+\[16\] Hendrik Kleinwaechter (2020); *This is How the BEST NEAPOLITAN PIZZA Is Made*;
+The Bread Code: [https://www.youtube.com/watch?v=EI4RoemHe5M](https://www.youtube.com/watch?v=EI4RoemHe5M) <br>
