--- a/_posts/2021-03-24-pizza.md
+++ b/_posts/2021-03-24-pizza.md
@@ -4,12 +4,24 @@ title:  A Scientist's Homemade Pizza
 date: 2021-03-24 20:16:00
 description: My experiments with homemade pizza, including scientific background and a full recipe.
 comments: true
+image: /assets/img/blog/pizza/pizza0.JPG
 ---
 
 ## Recipe
-If you want to get started making pizza right away, here is my dough recipe.
-Check the rest of the [article below](#intro) for science and background information on how the recipe works,
-as well as tips and explanation on the individual steps.
+
+<div class="row justify-content-sm-center mb-3">
+    <div class="col-md-3 mt-3">
+      If you want to get started making pizza right away, here is my dough recipe.
+      Check the rest of the <a href="#intro">article below</a> for science and background information on how the recipe works,
+      as well as tips and explanation on the individual steps. <br> <br>
+      The scale column in the recipe gives the fraction of the mass of the main ingredient,
+      which is identified by a scaling of 100% (in this case flour). Procedures on the right
+      apply to all ingredients in that part of the table.
+    </div>
+    <div class="col-md-9 mt-3">
+        <img class="img-fluid rounded z-depth-1" src="{{ '/assets/img/blog/pizza/pizza0.JPG' | relative_url }}" alt="" title="the resulting pizza"/>
+    </div>
+</div>
 
 <table class="recipe">
     <tr>
@@ -172,6 +184,22 @@ the main dough \[[11](#references)\]. Dan Souza suggests on the *American test K
 suggests using half of the total water used in the dough for *Tangzhong* and mixing it with flour in a 5:1 ratio 
 (5 parts water, 1 part flour).
 
+<div class="row">
+    <div class="col-sm mt-3 mt-md-0">
+        <img class="img-fluid rounded z-depth-1" src="{{ '/assets/img/blog/pizza/pizza3.JPG' | relative_url }}" alt="" title="mix flour and water"/>
+    </div>
+    <div class="col-sm mt-3 mt-md-0">
+        <img class="img-fluid rounded z-depth-1" src="{{ '/assets/img/blog/pizza/pizza4.JPG' | relative_url }}" alt="" title="bring to boil"/>
+    </div>
+    <div class="col-sm mt-3 mt-md-0">
+        <img class="img-fluid rounded z-depth-1" src="{{ '/assets/img/blog/pizza/pizza5.JPG' | relative_url }}" alt="" title="boil until thick paste forms"/>
+    </div>
+</div>
+<div class="caption">
+  When flour is mixed with water and boiled, a gelatinous paste forms. Adding the cooled down paste to dough improves
+  its consistency and helps it to retain moisture.
+</div>
+
 ## 5 - Full Recipe
 Now it is time to put all components together and make the pizza. We use flour, water, salt, sugar and yeast. Example
 ratios are shown in the [table at the beginning of the post](#Recipe). The yeast content is very low, to allow for a 
@@ -198,6 +226,22 @@ metal bench-scraper, as it make working with high hydration dough much easier.
   dough becomes hard to work with, let it sit for a few minutes, so the gluten network can relax. You are done when the 
   dough can be stretched between your fingers, without breaking, so thin it becomes translucent (window test). 
   \[[12](#references)\] and \[[13](#references)\] show several kneading techniques for high hydration dough.
+
+<div class="row">
+    <div class="col-sm mt-3 mt-md-0">
+        <img class="img-fluid rounded z-depth-1" src="{{ '/assets/img/blog/pizza/pizza6.JPG' | relative_url }}" alt="" title="before kneading"/>
+    </div>
+    <div class="col-sm mt-3 mt-md-0">
+        <img class="img-fluid rounded z-depth-1" src="{{ '/assets/img/blog/pizza/pizza7.JPG' | relative_url }}" alt="" title="machine kneading"/>
+    </div>
+    <div class="col-sm mt-3 mt-md-0">
+        <img class="img-fluid rounded z-depth-1" src="{{ '/assets/img/blog/pizza/pizza8.JPG' | relative_url }}" alt="" title="hand kneading"/>
+    </div>
+</div>
+<div class="caption">
+  Images show the dough before kneading (left), after kneading by machine (center), and after additional hand kneading (right).
+</div>
+
 - (9) Place the dough back in the mixing bowl and cover with a damp towel. Ferment for 1 - 2 hours.
 - (10) Divide the dough into balls of 250g - 300g weight. Roll the dough into itself, like making Mozzarella, 
   to form balls with high surface tension and multiple "layers" of dough.
@@ -214,6 +258,21 @@ metal bench-scraper, as it make working with high hydration dough much easier.
   it this way. The goal is an evenly thin disc, with a slightly thicker rim. Most of the gas should be pressed 
   into that rim. Do not use a rolling pin or similar tool, as this will flatten the pizza everywhere equally and does 
   not allow for a thicker rim on the outside.
+
+<div class="row">
+    <div class="col-sm mt-6 mt-md-0">
+        <img class="img-fluid rounded z-depth-1" src="{{ '/assets/img/blog/pizza/pizza1.JPG' | relative_url }}" alt="" title="mix flour and water"/>
+    </div>
+    <div class="col-sm mt-6 mt-md-0">
+        <img class="img-fluid rounded z-depth-1" src="{{ '/assets/img/blog/pizza/pizza2.JPG' | relative_url }}" alt="" title="bring to boil"/>
+    </div>
+</div>
+<div class="caption">
+  Even though I hurried when taking the picture on the left, it tool long enough for the dough to start sticking to the work surface.
+  To salvage the pizza I used a bench-scraper to remove it from the surface and folded it onto itself to prevent the dough from breaking
+  and leaking tomato sauce in the oven.
+</div>
+
 - (14) Use as little flour as possible during the shaping, as excess flour will burn in the oven. But make sure the 
   dough does slide around on your working surface without sticking before you proceed to adding toppings. If the dough
   rips during the shaping process, you will most likely not be able to fix that. Do not bake a pizza with holes in 
