--- a/_posts/2021-03-24-pizza.md
+++ b/_posts/2021-03-24-pizza.md
@@ -4,7 +4,7 @@ title:  A Scientist's Homemade Pizza
 date: 2021-03-24 20:16:00
 description: My experiments with homemade pizza, including scientific background and a full recipe.
 comments: true
-image: /assets/img/blog/pizza/pizza0.JPG
+og_image: /assets/img/blog/pizza/pizza0.JPG
 ---
 
 ## Recipe
